Initialized Angular App

--- a/toDoHTML.html
+++ b/toDoHTML.html
@@ -1,14 +1,17 @@
 <DOCTYPE html>
-<html ng-app=ngTodo>
+<html ng-app="ngTodo">
 	<head>
 		<script type="text/javascript" src="angular.min.js"></script>
-		<script type="text/javascript" src="toDo.js"></script>
+		<script type="text/javascript" src="toDoJS.js"></script>
 	</head>
 	<body>
+
+		<!-- <div ng-controller="ngTodoController"> -->
 		<!-- <input type="text" name=""> 
         <button type="submit" name="">Add</button>
 		<li ng-repeat=[]>
 
 		</li> -->
+		<!-- </div> -->
 	</body>
 </html>
