--- a/toDoHTML.html
+++ b/toDoHTML.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 
-		<!-- <div ng-controller="ngTodoController"> -->
+		<div ng-controller="ngTodoController">
 		<!-- <input type="text" name=""> 
         <button type="submit" name="">Add</button>
 		<li ng-repeat=[]>
 
 		</li> -->
-		<!-- </div> -->
+		
 	</body>
 </html>
