--- a/toDoHTML.html
+++ b/toDoHTML.html
@@ -8,10 +8,11 @@
 	<body>
 
 		<div ng-controller="ngTodoController">
-		<!-- <input type="text" ng-model="add.list"> 
-        <button ng-click="addTodo(add.list)">
-			Add
-		</button> -->
+		<input type="text" ng-model="add.title">
+		<input type="text" ng-model="add.details"> 
+        <button ng-click="addTodo(add.title,add.details)">
+			Add todo
+		</button>
 		<h1>Todos</h1>
 		<ul>
 			<li class="list" ng-repeat="todo in Todos">
