User can delete a Todo

--- a/toDoHTML.html
+++ b/toDoHTML.html
@@ -18,9 +18,9 @@
 			<li class="list" ng-repeat="todo in Todos">
 				<h2>{{ todo.title }}</h2>
 				<p>{{ todo.details }}</p>
-				<!-- <button ng-click="deleteTodo(todo)">
+				<button ng-click="deleteTodo(todo)">
 					Delete
-				</button> -->
+				</button>
 			</li>
 		</ul>		
 	</body>
